--- a/hic_env.yml
+++ b/hic_env.yml
@@ -270,6 +270,7 @@ dependencies:
   - r-digest=0.6.33=r43h884c59f_0
   - r-downloader=0.4=r43h6115d3f_0
   - r-dplyr=1.1.3=r43h884c59f_0
+  - r-dt=0.33=r43hc72bb7e_0
   - r-ellipsis=0.3.2=r43h76d94ec_0
   - r-eulerr=7.0.2=r43h08d816e_0
   - r-evaluate=0.22=r43h6115d3f_0
@@ -380,6 +381,7 @@ dependencies:
   - r-tidyr=1.3.0=r43h884c59f_0
   - r-tidyselect=1.2.0=r43h6115d3f_0
   - r-tidytree=0.4.5=r43h6115d3f_0
+  - r-tidyverse=2.0.0=r43h785f33e_1
   - r-tweenr=2.0.2=r43h884c59f_0
   - r-utf8=1.2.4=r43h76d94ec_0
   - r-uuid=1.1_1=r43h76d94ec_0
